--- a/scoreboard/package.json
+++ b/scoreboard/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-server": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
