--- a/dinosaur_redux/package.json
+++ b/dinosaur_redux/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-server": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
